# testGPT

GPT/: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
GPT/src/app/: app.py  config.py  models.py
